# Real-Time-Operating-System

./: CMakeLists.txt  README.md
include/: fault_tolerance.h  memory_matrix.h  ml_engine.h  scheduler.h  system_config.h  task_manager.h
src/: main.c
src/core/: kernel.c  memory_matrix.c  scheduler.c  task_manager.c
src/fault/: fault_tolerance.c
src/ml/: ml_engine.c
